<resources>
    <string name="app_name">Tasks</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- My Strings -->
    <string name="Save">Save</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="Undo">Undo</string>
    <string name="AddNewTask">Add new Task</string>
    <string name="NewTaskAdded">New Task Added</string>
    <string name="NewSubTaskAdded">New Sub Task Added</string>
    <string name="NewListAdded">New Task Added</string>
    <string name="AddNewList">Add new List</string>
    <string name="Lists">Lists</string>
    <string name="NewListHint">Title of list</string>
    <string name="AddDetails">Add Details</string>
    <string name="TaskTitle">Task Title</string>
    <string name="ListTitle">List Title</string>
    <string name="MoveTaskTo">Move task to</string>
    <string name="RenameList">Rename List</string>
    <string name="DeleteCompletedTasks">Delete Completed Tasks</string>
    <string name="DeleteList">Delete List</string>
    <string name="SortBy">Sort by</string>
    <string name="MyOrder">My order</string>
    <string name="CreationDate">Creation date</string>
    <string name="DueDate">Due date</string>
    <string name="DefaultListDelete">Default List can\'t be deleted</string>
    <string name="Theme">Theme</string>
    <string name="Dark">Dark</string>
    <string name="Light">Light</string>
    <string name="SubTasks">Sub Tasks</string>
    <string name="SubTask">Sub Task</string>
    <string name="SubTaskTitle">Sub Task title</string>
    <string name="AddSubTask">Add Sub Task</string>
    <string name="Complete">Complete</string>
    <string name="AddNewSubTask">Add new Sub Task</string>
    <string name="ChangeSubTaskTitle">Change Sub Task Title</string>
    <string name="SubTaskMarkedAsIncomplete">Sub Task marked as incomplete</string>
    <string name="SubTaskMarkedAsComplete">Sub Task marked as complete</string>
    <string name="TaskMarkedAsIncomplete">Task marked as incomplete</string>
    <string name="TaskMarkedAsComplete">Task marked as complete</string>
    <string name="SubTaskDeleted">Sub Task deleted</string>
    <string name="TaskDeleted">Task deleted</string>
    <string name="OneITDeleted">One incomplete Task deleted</string>
    <string name="OneCTDeleted">One complete Task deleted</string>
    <string name="AllCTDeleted">All completed Tasks of this list deleted</string>
    <string name="OneListDeleted">One List deleted</string>
    <string name="NoDateSet">No date set</string>
    <string name="NoTimeSet">No time set</string>
    <string name="Time">Time</string>
</resources>