<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorSecondaryBg"
    android:paddingTop="24dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:paddingStart="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/list_view_sort_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="16dp"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SortBy"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_view_sort_option_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/MyOrder"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_view_rename_list_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RenameList"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_view_delete_complete_tasks_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/list_view_delete_complete_tasks_option_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DeleteCompletedTasks"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_view_delete_list_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/list_view_delete_list_option_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DeleteList"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>