<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryBg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_task_list_cd_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        android:text="@string/AddNewList"
        android:textColor="@color/colorAccentSecondary"/>

    <EditText
        android:id="@+id/new_task_list_title_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/NewListHint"
        android:textColorHint="@color/colorUnavailableText"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/add_new_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:text="@string/Save"
            android:textAllCaps="false"
            android:textColor="@color/colorAccentSecondary"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>