<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSecondaryBg"
    android:orientation="vertical">

    <EditText
        android:id="@+id/new_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/TaskTitle"
        android:textColorHint="@color/colorUnavailableText"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/new_task_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/AddDetails"
        android:textColorHint="@color/colorUnavailableText"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/add_new_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@null"
            android:text="@string/Add"
            android:textAllCaps="false"
            android:textColor="@color/colorAccentSecondary"
            android:textSize="18sp"
            />
    </LinearLayout>

</LinearLayout>