<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="64dp"
    android:background="@color/colorPrimaryBg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/SortBy"
        android:textColor="@color/colorAccentSecondary"
        android:background="@color/colorSecondaryBg"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/list_view_sort_my_order_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:focusable="true">

        <TextView
            android:id="@+id/list_view_sort_my_order_option_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MyOrder"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorSecondaryBg" />

    <LinearLayout
        android:id="@+id/list_view_sort_due_order_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/list_view_sort_due_order_option_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DueDate"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorSecondaryBg" />

    <LinearLayout
        android:id="@+id/list_view_sort_creation_order_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/list_view_sort_creation_order_option_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreationDate"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorSecondaryBg" />




</LinearLayout>